use texture view for preview

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.example.camera.AutoFitSurfaceView
-        android:id="@+id/surface_preview"
-        android:layout_width="wrap_content"
+    <com.example.camera.utils.AutoFitTextureView
+        android:id="@+id/texture_view"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,6 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:src="@drawable/ic_camera"
+        android:onClick="saveImage"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
