--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,32 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorBoxRed">#FF0000</color>
+    <color name="colorBoxGreen">#00FF00</color>
+    <color name="colorBoxBlue">#0000FF</color>
+    <color name="colorBoxYellow">#FFFF00</color>
+    <color name="colorBoxCyan">#00FFFF</color>
+    <color name="colorBoxMagenta">#FF00FF</color>
+    <color name="colorBoxWhite">#FFFFFF</color>
+    <color name="colorBoxGreenIntense">#55FF55</color>
+    <color name="colorBoxOrange">#FFA500</color>
+    <color name="colorBoxPinkLight">#FF8888</color>
+    <color name="colorBoxPurpleLight">#AAAAFF</color>
+    <color name="colorBoxYellowLight">#FFFFAA</color>
+
+    <array name="bbox_colors">
+        <item>@color/colorBoxRed</item>
+        <item>@color/colorBoxGreen</item>
+        <item>@color/colorBoxBlue</item>
+        <item>@color/colorBoxYellow</item>
+        <item>@color/colorBoxCyan</item>
+        <item>@color/colorBoxMagenta</item>
+        <item>@color/colorBoxWhite</item>
+        <item>@color/colorBoxGreenIntense</item>
+        <item>@color/colorBoxOrange</item>
+        <item>@color/colorBoxPinkLight</item>
+        <item>@color/colorBoxPurpleLight</item>
+        <item>@color/colorBoxYellowLight</item>
+    </array>
+
 </resources>
