--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data/>
+    <data />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -18,6 +18,15 @@
             app:layout_constraintHeight_percent="0.8"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <com.example.camera.tracking.TrackerOverlayView
+            android:id="@+id/view_tracker"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@id/texture_view"
+            app:layout_constraintEnd_toEndOf="@id/texture_view"
+            app:layout_constraintStart_toStartOf="@id/texture_view"
+            app:layout_constraintTop_toTopOf="@id/texture_view" />
 
         <TextView
             android:id="@+id/txt_result_1"
