--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.example.camera.tracking.TrackerOverlayView
+        <com.example.camera.presentation.main.tracking.TrackerOverlayView
             android:id="@+id/view_tracker"
             android:layout_width="0dp"
             android:layout_height="0dp"
