--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#607D8B</color>
+    <color name="colorPrimaryDark">#455A64</color>
+    <color name="colorAccent">#FFC107</color>
     <color name="white">#FFF</color>
 
-    <color name="colorBoxRed">#FF0000</color>
-    <color name="colorBoxGreen">#00FF00</color>
-    <color name="colorBoxBlue">#0000FF</color>
-    <color name="colorBoxGreenDark">#009688</color>
-    <color name="colorBoxCyan">#00C6C6</color>
-    <color name="colorBoxMagenta">#B800B8</color>
-    <color name="colorBoxPurpleDark">#673AB7</color>
-    <color name="colorBoxGreenIntense">#55FF55</color>
-    <color name="colorBoxOrange">#FFA500</color>
-    <color name="colorBoxPinkLight">#FF8888</color>
+    <color name="colorBoxRed">#F44336</color>
+    <color name="colorBoxGreen">#4CAF50</color>
+    <color name="colorBoxBlue">#2196F3</color>
+    <color name="colorBoxTeal">#009688</color>
+    <color name="colorBoxCyan">#00BCD4</color>
+    <color name="colorBoxPurple">#9C27B0</color>
+    <color name="colorBoxDeepPurple">#673AB7</color>
+    <color name="colorBoxLightGreen">#8BC34A</color>
+    <color name="colorBoxOrange">#FF9800</color>
+    <color name="colorDeepOrange">#FF5722</color>
+    <color name="colorBoxPink">#E91E63</color>
     <color name="colorBoxPurpleLight">#6262FD</color>
-    <color name="colorBoxBrown">#575700</color>
 
     <array name="bbox_colors">
         <item>@color/colorBoxRed</item>
         <item>@color/colorBoxGreen</item>
         <item>@color/colorBoxBlue</item>
-        <item>@color/colorBoxGreenDark</item>
+        <item>@color/colorBoxTeal</item>
         <item>@color/colorBoxCyan</item>
-        <item>@color/colorBoxMagenta</item>
-        <item>@color/colorBoxPurpleDark</item>
-        <item>@color/colorBoxGreenIntense</item>
+        <item>@color/colorBoxPurple</item>
+        <item>@color/colorBoxDeepPurple</item>
+        <item>@color/colorBoxLightGreen</item>
         <item>@color/colorBoxOrange</item>
-        <item>@color/colorBoxPinkLight</item>
+        <item>@color/colorBoxPink</item>
         <item>@color/colorBoxPurpleLight</item>
-        <item>@color/colorBoxBrown</item>
+        <item>@color/colorDeepOrange</item>
     </array>
 
 </resources>
