implement local/remote events and improve ui

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#FFC107</color>
     <color name="white">#FFF</color>
     <color name="black">#000</color>
+    <color name="colorAccentLight">#A1FFECB3</color>
+    <color name="colorGrayLabel">#3f4141</color>
 
     <color name="colorBoxRed">#F44336</color>
     <color name="colorBoxGreen">#4CAF50</color>
