--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -95,6 +95,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_half"
+                    android:progressTint="@color/colorAccentLight"
+                    android:thumbTint="@color/colorAccent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/txt_detections_label"
@@ -150,6 +152,8 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_half"
+                    android:progressTint="@color/colorAccentLight"
+                    android:thumbTint="@color/colorAccent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/txt_confidence_label"
@@ -195,11 +199,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_half"
                     android:layout_marginEnd="8dp"
+                    android:onClick="@{() -> vm.onLocalInferenceSelected()}"
                     android:text="@string/setup_inference_local"
                     android:textAlignment="center"
                     app:layout_constraintEnd_toStartOf="@id/txt_inference_remote"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/txt_inference_type" />
+                    app:layout_constraintTop_toBottomOf="@id/txt_inference_type"
+                    app:selected="@{vm.isLocalInferenceLive}" />
 
                 <TextView
                     android:id="@+id/txt_inference_remote"
@@ -207,38 +213,59 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
+                    android:onClick="@{() -> vm.onRemoteInferenceSelected()}"
                     android:text="@string/setup_inference_remote"
                     android:textAlignment="center"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/txt_inference_local"
-                    app:layout_constraintTop_toTopOf="@id/txt_inference_local" />
+                    app:layout_constraintTop_toTopOf="@id/txt_inference_local"
+                    app:selected="@{!vm.isLocalInferenceLive}" />
 
-                <EditText
-                    android:id="@+id/edit_ip_address"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/text_input_ip_address"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/margin_default"
                     android:layout_marginEnd="@dimen/margin_default"
-                    android:digits="0,1,2,3,4,5,6,7,8,9,."
-                    android:hint="@string/setup_server_address"
-                    android:importantForAutofill="no"
-                    android:inputType="number"
-                    android:maxLength="15"
-                    app:layout_constraintEnd_toStartOf="@id/edit_port"
+                    android:theme="@style/TextInputLayoutAppearance"
+                    app:layout_constraintEnd_toStartOf="@id/text_input_port"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/txt_inference_remote" />
+                    app:layout_constraintTop_toBottomOf="@id/txt_inference_remote"
+                    app:visibility="@{!vm.isLocalInferenceLive}">
 
-                <EditText
-                    android:id="@+id/edit_port"
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:digits="0,1,2,3,4,5,6,7,8,9,."
+                        android:hint="@string/setup_server_address"
+                        android:imeOptions="actionNext"
+                        android:importantForAutofill="no"
+                        android:inputType="number"
+                        android:maxLength="15" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/text_input_port"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
-                    android:hint="@string/setup_server_port"
-                    android:importantForAutofill="no"
-                    android:inputType="number"
-                    android:maxLength="5"
+                    android:theme="@style/TextInputLayoutAppearance"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/edit_ip_address"
-                    app:layout_constraintTop_toTopOf="@id/edit_ip_address" />
+                    app:layout_constraintStart_toEndOf="@id/text_input_ip_address"
+                    app:layout_constraintTop_toTopOf="@id/text_input_ip_address"
+                    app:visibility="@{!vm.isLocalInferenceLive}">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:digits="0,1,2,3,4,5,6,7,8,9,."
+                        android:hint="@string/setup_server_port"
+                        android:imeOptions="actionDone"
+                        android:importantForAutofill="no"
+                        android:inputType="number"
+                        android:maxLength="5" />
+
+                </com.google.android.material.textfield.TextInputLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
