--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,7 +13,8 @@
     </style>
 
     <style name="TextLabelStyle">
-        <item name="android:layout_marginTop">52dp</item>
+        <item name="android:layout_marginTop">32dp</item>
+        <item name="android:textColor">@color/colorGrayLabel</item>
     </style>
 
     <style name="ValueComponentStyle">
@@ -21,9 +22,21 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="EditTextHintStyle">
+        <item name="android:textColor">@color/colorGrayLabel</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="TextInputLayoutAppearance" parent="Widget.Design.TextInputLayout">
+        <item name="hintTextAppearance">@style/EditTextHintStyle</item>
+        <item name="android:textColorHint">@color/colorGrayLabel</item>
+        <item name="colorControlNormal">@color/colorGrayLabel</item>
+        <item name="colorControlActivated">@color/colorAccent</item>
+    </style>
+
     <style name="SwitchButtonStyle">
         <item name="android:background">@drawable/shape_selection_active</item>
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@drawable/selector_option_text_color</item>
         <item name="android:paddingStart">32dp</item>
         <item name="android:paddingEnd">32dp</item>
         <item name="android:paddingTop">16dp</item>
