--- a/app/src/main/res/layout/activity_setup.xml
+++ b/app/src/main/res/layout/activity_setup.xml
@@ -62,126 +62,42 @@
                     style="@style/ValueComponentStyle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:items="@{vm.setupData.resolutionsLabels}"
+                    app:items="@{vm.resolutionsLabels}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@id/txt_resolution"
                     app:onItemSelected="@{(position) -> vm.onResolutionSelected(position)}"
                     app:selectedIndex="@{vm.resolutionIndexLive}"
                     tools:listitem="@android:layout/simple_spinner_item" />
 
-                <TextView
-                    android:id="@+id/txt_detections_label"
-                    style="@style/TextLabelStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/setup_max_detections"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/txt_resolution" />
-
-                <TextView
-                    android:id="@+id/txt_detections"
-                    style="@style/ValueComponentStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_half"
-                    android:text="@{vm.maxDetectionsLive.toString()}"
-                    app:layout_constraintBottom_toBottomOf="@id/txt_detections_label"
-                    app:layout_constraintStart_toEndOf="@id/txt_detections_label"
-                    app:layout_constraintTop_toTopOf="@id/txt_detections_label"
-                    tools:text="5" />
-
-                <SeekBar
-                    android:id="@+id/slider_detections_count"
+                <com.example.camera.utils.view.SeekBarCompositeView
+                    android:id="@+id/seek_max_detections"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_half"
-                    android:progressTint="@color/colorAccentLight"
-                    android:thumbTint="@color/colorAccent"
+                    android:layout_marginTop="@dimen/margin_default"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/txt_detections_label"
-                    app:max="@{vm.setupData.detectionCountLimitMax}"
-                    app:min="@{vm.setupData.detectionCountLimitMin}"
-                    app:onProgressChange="@{(progress) -> vm.onMaxDetectionLimitChange(progress)}"
-                    app:progress="@{vm.settingsLive.maxDetections}"
-                    app:step="@{1}" />
+                    app:layout_constraintTop_toBottomOf="@id/txt_resolution"
+                    app:maxValue="@integer/detection_limit_max"
+                    app:minValue="@integer/detection_limit_min"
+                    app:progress="@{vm.maxDetectionsLive}"
+                    app:progressListener="@{(progress) -> vm.onMaxDetectionLimitChange(progress)}"
+                    app:stepSize="@integer/detection_step_size"
+                    app:text="@string/setup_max_detections" />
 
-                <TextView
-                    android:id="@+id/txt_detections_limit_label_min"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_small"
-                    android:text="@{vm.setupData.detectionCountLimitMinLabel}"
-                    app:layout_constraintStart_toStartOf="@id/slider_detections_count"
-                    app:layout_constraintTop_toBottomOf="@id/slider_detections_count"
-                    tools:text="1" />
-
-                <TextView
-                    android:id="@+id/txt_detections_limit_label_max"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/margin_small"
-                    android:text="@{vm.setupData.detectionCountLimitMaxLabel}"
-                    app:layout_constraintEnd_toEndOf="@id/slider_detections_count"
-                    app:layout_constraintTop_toBottomOf="@id/slider_detections_count"
-                    tools:text="10" />
-
-                <TextView
-                    android:id="@+id/txt_confidence_label"
-                    style="@style/TextLabelStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/setup_confidence_threshold"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/slider_detections_count" />
-
-                <TextView
-                    android:id="@+id/txt_confidence"
-                    style="@style/ValueComponentStyle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_half"
-                    android:text="@{vm.confidenceThresholdLive}"
-                    app:layout_constraintBottom_toBottomOf="@id/txt_confidence_label"
-                    app:layout_constraintStart_toEndOf="@id/txt_confidence_label"
-                    app:layout_constraintTop_toTopOf="@id/txt_confidence_label"
-                    tools:text="50" />
-
-                <SeekBar
-                    android:id="@+id/slider_confidence"
+                <com.example.camera.utils.view.SeekBarCompositeView
+                    android:id="@+id/seek_confidence_threshold"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_half"
-                    android:progressTint="@color/colorAccentLight"
-                    android:thumbTint="@color/colorAccent"
+                    android:layout_marginTop="@dimen/margin_default"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/txt_confidence_label"
-                    app:max="@{vm.setupData.confidenceThresholdRangeMax}"
-                    app:min="@{vm.setupData.confidenceThresholdRangeMin}"
-                    app:onProgressChange="@{(progress) -> vm.onConfidenceThresholdChange(progress)}"
-                    app:progress="@{vm.settingsLive.confidenceThreshold}"
-                    app:step="@{vm.setupData.confidenceThresholdSliderStep}" />
-
-                <TextView
-                    android:id="@+id/txt_confidence_range_label_min"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/margin_small"
-                    android:text="@{vm.setupData.confidenceThresholdRangeMinLabel}"
-                    app:layout_constraintStart_toStartOf="@id/slider_confidence"
-                    app:layout_constraintTop_toBottomOf="@id/slider_confidence"
-                    tools:text="30" />
-
-                <TextView
-                    android:id="@+id/txt_confidence_range_label_max"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="@dimen/margin_small"
-                    android:text="@{vm.setupData.confidenceThresholdRangeMaxLabel}"
-                    app:layout_constraintEnd_toEndOf="@id/slider_confidence"
-                    app:layout_constraintTop_toBottomOf="@id/slider_confidence"
-                    tools:text="100" />
+                    app:layout_constraintTop_toBottomOf="@id/seek_max_detections"
+                    app:maxValue="@integer/confidence_limit_max"
+                    app:minValue="@integer/confidence_limit_min"
+                    app:progress="@{vm.confidenceThresholdLive}"
+                    app:progressListener="@{(progress) -> vm.onConfidenceThresholdChange(progress)}"
+                    app:stepSize="@integer/confidence_step_size"
+                    app:text="@string/setup_confidence_threshold" />
 
                 <TextView
                     android:id="@+id/txt_inference_type"
@@ -190,7 +106,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/setup_inference_type"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/slider_confidence" />
+                    app:layout_constraintTop_toBottomOf="@id/seek_confidence_threshold" />
 
                 <TextView
                     android:id="@+id/txt_inference_local"
