--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="TrackerOverlayView">
-        <attr name="frameWidth" format="integer" />
-        <attr name="frameHeight" format="integer" />
+    <declare-styleable name="SeekBarCompositeView">
+        <attr name="text" format="string"/>
+        <attr name="minValue" format="integer"/>
+        <attr name="maxValue" format="integer"/>
+        <attr name="stepSize" format="integer"/>
     </declare-styleable>
 </resources>
